# NetSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sim_output.txt
.github/workflows/: cmake-single-platform.yml
include/: IO.hxx  factory.hxx  helpers.hxx  nodes.hxx  package.hxx  raports.hxx  simulation.hxx  storage_types.hxx  types.hxx
simulatinos/: simple_sim_build.txt
src/: IO.cpp  factory.cpp  nodes.cpp  package.cpp  package_sender.cpp  probability_generator.cpp  ramp.cpp  raports.cpp  receiver_preferences.cpp  simulation.cpp  storage_types.cpp
src/packageSender/: PackageSender.cpp
src/receiver/: IPackageReceiver.cpp  IPackageReceiver.hpp  ProbablityGenerator.cpp  ReceiverPreferences.cpp  ReceiverPreferences.hpp
test/: factory_test.cpp  factory_tests.cpp  package_sender_tests.cpp  ramp_tests.cpp  receiver_tests.cpp  tests.cpp  worker_tests.cpp
